Delete note function.
Changed put and delete to path paramter instead of id in body for rest-api.

Get /note/:id
get specifik note.
