# src/routes/protected.js
@@ -1,6 +1,6 @@
 import express from 'express'
 import authenticate from '../middleware/auth.js'
-import {getNotes, newNote, changeNote, deleteNote, searchNote} from '../controllers/notes.js'
+import {getNotes, newNote, getNote, changeNote, deleteNote, searchNote} from '../controllers/notes.js'
 
 const router = express.Router()
 
@@ -9,8 +9,10 @@ router.use(authenticate)
 
 router.get("/notes", getNotes)
 router.post("/notes", newNote)
-router.put("/notes", changeNote)
-router.delete("/notes", deleteNote)
+
+router.get("/notes/:id", getNote)
+router.put("/notes/:id", changeNote)
+router.delete("/notes/:id", deleteNote)
 
 router.get("/notes/search", searchNote)
 
